--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,8 +3,12 @@ name = "backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
+    "autopep8>=2.3.2",
+    "fastapi>=0.117.1",
+    "httpx[socks]>=0.28.1",
+    "langfuse>=3.5.1",
     "pydantic-ai>=1.0.10",
     "pydantic-ai-slim[openai]>=1.0.10",
 ]
