Feat: add more slide

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,13 @@ dependencies = [
     "langfuse>=3.5.1",
     "pydantic-ai>=1.0.10",
     "pydantic-ai-slim[openai]>=1.0.10",
+    "aiohttp>=3.12.15",
+    "docling>=2.43.0",
+    "httpx[socks]>=0.28.1",
+    "pathvalidate>=3.3.1",
+    "pdfplumber>=0.11.7",
+    "pytest>=8.4.1",
+    "python-pptx>=1.0.2"
 ]
 
 [[tool.uv.index]]
