--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "pathvalidate>=3.3.1",
     "pdfplumber>=0.11.7",
     "pytest>=8.4.1",
-    "python-pptx>=1.0.2"
+    "python-pptx>=1.0.2",
+    "sqlmodel>=0.0.25",
+    "dirtyjson>=1.0.8",
 ]
 
 [[tool.uv.index]]
