--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ag-ui/client": "^0.0.40",
+    "@ag-ui/core": "^0.0.39",
     "@babel/standalone": "^7.28.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
