--- a/frontend/presentation-templates/general/settings.json
+++ b/frontend/presentation-templates/general/settings.json
@@ -1,5 +1,5 @@
 {
-    "description": "General purpose layouts for common presentation elements",
+    "description": "通用模板",
     "ordered": false,
     "default": true
 } 
